# senagenceyi

./: .gitignore  pyproject.toml
data/: agences_nationales.xlsx  agences_nationales_similarites.xlsx  decret_repartition_services_raw.xlsx  decret_repartition_services_structured.xlsx  senegal_services.xlsx  services_sites_officiels.xlsx
src/senagenceyi/: __init__.py
src/senagenceyi/model/: main.py
src/senagenceyi/scraping/: agences_nationales.py  decret_repartition_services.py  search.py  senegal_services.py
