[project]
name = "senagenceyi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Georges Mbissane SARR", email = "georgesmbissanes@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.2",
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 90
lint.select = ["I"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 20
